# Musique

./: .env.example  .gitattributes  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
db/: schema.ts
drizzle/: 0000_wakeful_galactus.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_init.sql  0001_catalog.sql  0002_library.sql  0003_saved_albums.sql  0004_lyrics.sql  0005_discovery.sql
src-tauri/src/: errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: http.rs  mod.rs  pkce.rs  token.rs
src-tauri/src/commands/: auth.rs  credentials.rs  lastfm.rs  library.rs  lyrics.rs  media.rs  mod.rs  playback.rs  settings.rs  share.rs  spotify.rs  theme.rs  window.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/repos/: albums.rs  artists.rs  mod.rs  playback_history.rs  playlists.rs  saved_tracks.rs  search_history.rs  tracks.rs  users.rs
src-tauri/src/discord/: mod.rs
src-tauri/src/lastfm/: mod.rs
src-tauri/src/lyrics/: mod.rs
src-tauri/src/media_controls/: mod.rs
src-tauri/src/playback/: mod.rs
src-tauri/src/spotify/: mod.rs  types.rs
src/api/: auth.ts  credentials.ts  lastfm.ts  library.ts  lyrics.ts  media.ts  playback.ts  settings.ts  share.ts  spotify.ts  theme.ts  window.ts
src/components/: ErrorBoundary.tsx  ThemeEngine.tsx  UpdatePrompt.tsx
src/components/auth/: ProfileCard.tsx
src/components/layout/: Immersive.tsx  Layout.tsx  LyricsPanel.tsx  PlayerBar.tsx  QueuePanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: AddToPlaylistModal.tsx  AlbumCard.tsx  ArtistCard.tsx  ContextMenu.tsx  CoverArt.tsx  Dropdown.tsx  Loader.tsx  PageHeader.tsx  PlayActions.tsx  QuitConfirm.tsx  ReleaseCountdown.tsx  SortToolbar.tsx  Toaster.tsx  Tooltip.tsx  TrackRow.tsx  TrackToolbar.tsx
src/hooks/: useAlbum.ts  useArtist.ts  useAuth.ts  useLibrary.ts  useLyrics.ts  usePlayerControls.ts  usePlaylist.ts  useReflowPulse.ts  useSearch.ts
src/lib/: backdrop.test.ts  backdrop.ts  color.ts  err.ts  lyrics.tsx  lyricsRows.test.ts  lyricsRows.ts  mesh.ts  motion.ts  platform.ts  prefetch.ts  share.ts  updater.ts
src/pages/: AlbumPage.tsx  ArtistPage.tsx  Home.tsx  Library.tsx  PlaylistPage.tsx  Playlists.tsx  Profile.tsx  Search.tsx  Settings.tsx
src/store/: addToPlaylist.store.ts  auth.store.ts  credentials.store.ts  pins.store.ts  player.store.ts  prefs.store.ts  queue.store.ts  theme.store.ts  toast.store.ts  ui.store.ts  updater.store.ts
src/types/: ipc.ts  library.ts  spotify.ts
src/utils/: fmt.ts  palette.ts  radio.ts  romanize.ts
